--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,12 +16,13 @@
     margin: 15px;
 }
 
-.cinema-div  {
+.places-div  {
     display: inline-block;
     height: 130px;
-    width: 250px;
+    /* width: 250px; */
     border: solid 3px rgba(30, 24, 192, 0.449);
     text-align: center;
+    margin: 15px;
 }
 
 #clear  {
