box shadow added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,7 @@ img  {
     padding: 15px; 
     position: relative;
     top: 0; left: 0; bottom: 0; right: 0;
+    box-shadow: 2px 3px 3px 2px #8b8787;
 }
 
 .delete  {
